--- a/index.html
+++ b/index.html
@@ -434,76 +434,46 @@
                             <p class="title">In the Style of Neville Brody</p>
                             <hr class="line">
                             <p class="description">One of our final class projects involved an imaginary scenario: each
-                                of
-                                the students has been hired by PBS to design a poster for an episode in an upcoming
-                                series
-                                about the history of design. Each episode will cover a different designer who led the
-                                design
-                                of their time.
+                                of the students has been hired by PBS to design a poster for an episode in an upcoming
+                                series about the history of design. Each episode will cover a different designer who
+                                led the
+                                design of their time.
                             </p>
                         </div>
                         <div class="column colProcess">
-                            <p class="title">"The Message is the Medium"</p>
+                            <p class="title">Research</p>
                             <p class="processDescription">Naturally, we drew designers out of a hat. I drew a
                                 particular
                                 rebel named Neville Brody.
                                 <br>
                                 <br> Known for his early work for Fetish Records and his design for The Face Magazine
-                                in
-                                the 80’s and - later in the age of the internet - his leadership in digital font
-                                creation,
-                                dissemination, and usage thereof through FUSE and FontShop.
+                                in the 80’s and - later in the age of the internet - his leadership in digital font
+                                creation through FUSE and FontShop.
                                 <br>
-                                <br>In his early days, Brody was a punk. He stayed on the forefront of design by
-                                experimentation
-                                with the abstract and precedent. He disdained his professors’ instruction, as they
-                                deemed
-                                his work “uncommercial.” He was almost expelled from The Royal College of Art in London
-                                after
-                                placing the Queen’s face sideways on a postage stamp design.
-                                <br>
-                                <br>While designing the poster, I stayed true to Brody’s attention to the defining
-                                philosophy
-                                of each project that is consistent in all his work. Through each unique iteration, I
-                                explored
-                                several of his unique works created through different points in his career, eventually
-                                settling
-                                on the style of his early work of the 80’s.
+                                <br>In his early days, Brody was a punk. He disdained his professors’ instruction, as
+                                they
+                                deemed his work “uncommercial.”
                             </p>
 
                             <div id="processBrodyGrid">
-                                <p class="processTextBrody" id="figure10Text">While leafing through
-                                    <i>The Graphic Language of Neville Brody,</i> a compilation and analysis of Brody's
-                                    work
-                                    by Jon Wozencroft, I came across a very intriguing set of album covers featuring a
-                                    very
-                                    gritty and inaccessible halftones and near-tribal markmaking - a motif and interest
-                                    which
-                                    spans brody's entire career. We were required to include an image of one of our
-                                    designer's
-                                    work, so I selected Stephen Mallinder's
-                                    <i>Pow Wow</i> and integrated it's style with my work.
-                                    <br>
-                                    <br>Each of the fonts used in the posters are Neville Brody's own, affiliated
-                                    either
-                                    with FUSE or his personal work.
-                                </p>
-                                <img class="figureProcess processBrody" id="figure18.1" src="Graphics/BRODY/brody-2-1.jpg"></img>
+                                <p class="subTitle">Inspiration</p>
                                 <p></p>
-                                <img class="figureProcess processBrody" id="figure18.2" src="Graphics/BRODY/brody-2-2.png"></img>
+                                <p class="processDescription">Selected works I chose to focus on, each are Brody's own.</p>
+                                <p></p>
+                                <img class="figureProcess processBrody" id="figure18.2" src="Graphics/BRODY/brody-2-2.png">
+                                <img class="figureProcess processBrody" id="figure18.2" src="Graphics/BRODY/brody-3-6.jpg">
 
-                                <p class="processTextBrody" id="figure11Text">Markmaking is a lifelong iterest of
-                                    Neville
-                                    Brody. For my first of several iterations, I chose to explore it in the convenience
-                                    of
-                                    digital space to find the somewhat primal effect he found so intriguing.</p>
-                                <img class="figureProcess processBrody" id="figure19.1" src="Graphics/BRODY/brody-3-1.jpg"></img>
+                                <p class="subTitle">Digital Ideation</p>
+                                <p class="processDescription">Markmaking is a lifelong iterest of
+                                    Neville Brody. For my first of several iterations, I chose to explore the somewhat
+                                    primal effect he found so
+                                    intriguing.</p>
                                 <p></p>
-                                <img class="figureProcess processBrody" id="figure19.2" src="Graphics/BRODY/brody-3-2.jpg"></img>
+                                <img class="figureProcess processBrody" id="figure19.1" src="Graphics/BRODY/brody-3-1.jpg">
                                 <p></p>
-                                <img class="figureProcess processBrody" id="figure19.3" src="Graphics/BRODY/brody-3-3.jpg"></img>
+
                                 <p></p>
-                                <img class="figureProcess processBrody" id="figure19.4" src="Graphics/BRODY/brody-3-4.png"></img>
+
 
                                 <p class="processTextBrody" id="figure12Text">A face is often seen in his work,
                                     especially
@@ -513,10 +483,8 @@
                                     achieve
                                     the two-tone black and white.</p>
                                 <img class="figureProcess processBrody" id="figure20.1" src="Graphics/BRODY/brody-4-1.jpg"></img>
-                                <p></p>
-                                <img class="figureProcess processBrody" id="figure20.2" src="Graphics/BRODY/brody-4-2.jpg"></img>
-                                <p></p>
-                                <img class="figureProcess processBrody" id="figure20.3" src="Graphics/BRODY/brody-4-3.jpg"></img>
+
+
 
                                 <p class="processTextBrody" id="figure13Text">Once again experimenting with primality
                                     of
@@ -531,8 +499,13 @@
                                     <br>This inital experiment was the precursor for the concepts I used in the final.
                                 </p>
                                 <img class="figureProcess processBrody" id="figure21.1" src="Graphics/BRODY/brody-5-1.jpg"></img>
+
+                                <p class="subTitle">Final Poster</p>
                                 <p></p>
-                                <img class="figureProcess processBrody" id="figure21.2" src="Graphics/BRODY/brody-5-2.png"></img>
+                                <p class="processDescription"></p>
+                                <p></p>
+                                <img class="figureProcess processBrody" id="figure18.2" src="Graphics/BRODY/brody-2-1.jpg">
+                                <img class="figureProcess processBrody" id="figure18.2" src="Graphics/BRODY/brody_6.jpg">
                             </div>
                         </div>
 
