body mantle revise, jabberwock prep

--- a/index.html
+++ b/index.html
@@ -75,39 +75,55 @@
                             <p class="title">Body Mantle</p>
                             <hr class="line">
                             <p class="description">The Poplar Prince’s robes were created from 101 twelve-inch poplar
-                                planks
-                                and held together with wood adhesive. The initial concept was modeled and rendered in
-                                Autodesk
-                                Maya, and the succeeding mantle was a loose adaption of what I could complete over the
-                                course
-                                of one all-nighter.</p>
+                                planks and held together with wood adhesive. The initial concept was modeled and
+                                rendered in
+                                Autodesk Maya, and the succeeding mantle was a loose adaption of what I could complete
+                                over the
+                                course of one all-nighter.</p>
                         </div>
                         <div class="column colProcess">
-                            <img class="figureProcess" id="figure1" src="Graphics/body_mantle_process1.jpg"></img>
-                            <p class="subTitle">101 Poplar Planks and Wood Glue</p>
-                            <p class="processDescription">The model was meant to liken cascading and asymmetrical
-                                movement
-                                a nontraditional ebb from bottom right to upper left culminating in a fractal spiral on
-                                the
-                                left shoulder.
-                                <br>
-                                <br> Because the poplar planks resembled reeds, I researched styles of traditional reed
-                                armor
-                                - especially that of ancient eastern shoguns. I began by creating a duct tape bust of
-                                my
-                                torso that I could use to brainstorm, though, I opted to brainstorm in the digital
-                                space
-                                instead. When I began to construct the mantle, I found that the skeleton made a better
-                                bust
-                                than my poplar-reinforced duct tape one. To create dimension of the overall form, a
-                                tiny
-                                (>.25in) spacer made of cut, layered, and glued poplar was placed between each plank.
-                                Without
-                                the spacers there would be no way to glue the sticks together. Each joint was held
-                                together
-                                for 30 minutes with a clothespin to avoid damage before the adhesive sealed.
+
+                            <p class="subTitle">Research</p>
+                            <p class="processDescription">Because the poplar planks resembled reeds, I researched styles of traditional reed
+                                armor - especially that of ancient eastern shoguns.
+                                <img class="figureProcess tall" src="Graphics/MANTLE/mantle-01.jpg">
                             </p>
-                            <img class="figureProcess" id="figure2" src="Graphics/body_mantle_process2.jpg"></img>
+
+                            <p class="subTitle">Sketches</p>
+                            <img class="figureProcess tall" src="Graphics/MANTLE/mantle-1.jpg">
+                            <img class="figureProcess tall" src="Graphics/MANTLE/mantle-2.jpg">
+                            <p class="subTitle">Digital Ideation</p>
+                            <p class="processDescription">I began by creating a duct tape
+                            bust of my torso that I could use to brainstorm, though, I opted to brainstorm in the digital
+                            space instead.</p>
+                            <div class="twoRow">
+                                <img class="figureProcess tall" src="Graphics/MANTLE/mantle-3.jpg">
+                                <img class="figureProcess tall" src="Graphics/MANTLE/mantle-4.jpg">
+                            </div>
+                            <p class="subTitle">Construction</p>
+                            <p class="processDescription">When I began to construct the mantle, I found that the skeleton made a
+                            better
+                            bust than my poplar-reinforced duct tape one. To create dimension of the overall form,
+                            a
+                            tiny (>.25in) spacer made of cut, layered, and glued poplar was placed between each
+                            plank.
+                            Without the spacers there would be no way to glue the sticks together. Each joint was
+                            held
+                            together for 30 minutes with a clothespin to avoid damage before the adhesive sealed.</p>
+                            <div class="threeCol">
+                                <img class="figureProcess tall" src="Graphics/MANTLE/mantle-6.jpg">
+                                <img class="figureProcess tall" src="Graphics/MANTLE/mantle-7.jpg">
+                                <img class="figureProcess tall" src="Graphics/MANTLE/mantle-6.5.jpg">
+                            </div>
+                            <p class="subTitle">The Poplar Prince</p>
+                            <div class="threeCol">
+                                <img class="figureProcess tall" src="Graphics/MANTLE/mantle-8.jpg">
+                                <img class="figureProcess tall" src="Graphics/MANTLE/mantle-9.jpg">
+                                <p class="processDescription">The model was meant to liken cascading and asymmetrical
+                                movement a nontraditional ebb from bottom right to upper left culminating in a fractal
+                                spiral on the left shoulder.</p>
+                            </div>
+                            <img class="figureProcess fullWidth" src="Graphics/MANTLE/mantle-10.jpg">
                         </div>
 
                         <p class="nextProject" onclick="incrementProject()">Next Project: </p>
@@ -130,16 +146,15 @@
                                 of the software.</p>
                         </div>
                         <div class="column colProcess">
-                            <p class="subTitle">Identity and UI</p>
-                            <img class="figureProcess figurePatch" src="Graphics/typo-corrected_01.jpg"></img>
-                            <img class="figureProcess figurePatch" src="Graphics/typo-corrected_02.jpg"></img>
-                            <img class="figureProcess figurePatch" src="Graphics/typo-corrected_03.jpg"></img>
-                            <img class="figureProcess figurePatch" src="Graphics/typo-corrected_04.jpg"></img>
-                            <img class="figureProcess figurePatch" src="Graphics/typo-corrected_05.jpg"></img>
-                            <img class="figureProcess figurePatch" src="Graphics/typo-corrected_06.jpg"></img>
-                            <img class="figureProcess figurePatch" src="Graphics/typo-corrected_07.jpg"></img>
-                            <img class="figureProcess figurePatch" src="Graphics/typo-corrected_08.jpg"></img>
-                            <img class="figureProcess figurePatch" src="Graphics/typo-corrected_09.jpg"></img>
+                            <img class="figureProcess figurePatch" src="Graphics/PATCH/typo-corrected_01.jpg">
+                            <img class="figureProcess figurePatch" src="Graphics/PATCH/typo-corrected_02.jpg">
+                            <img class="figureProcess figurePatch" src="Graphics/PATCH/typo-corrected_03.jpg">
+                            <img class="figureProcess figurePatch" src="Graphics/PATCH/typo-corrected_04.jpg">
+                            <img class="figureProcess figurePatch" src="Graphics/PATCH/typo-corrected_05.jpg">
+                            <img class="figureProcess figurePatch" src="Graphics/PATCH/typo-corrected_06.jpg">
+                            <img class="figureProcess figurePatch" src="Graphics/PATCH/typo-corrected_07.jpg">
+                            <img class="figureProcess figurePatch" src="Graphics/PATCH/typo-corrected_08.jpg">
+                            <img class="figureProcess figurePatch" src="Graphics/PATCH/typo-corrected_09.jpg">
                         </div>
 
                         <p class="nextProject" onclick="incrementProject()">Next Project: </p>
@@ -500,16 +515,19 @@
                             <div class="twoRow">
                                 <img class="figureProcess halfHeight" src="Graphics/BRODY/brody-4-1.jpg">
                                 <p class="processDescription" id="figure12Text">A face is often seen in his work,
-                                    especially early in his career, the faces were obscured in some way. I took an image of Brody
+                                    especially early in his career, the faces were obscured in some way. I took an
+                                    image of Brody
                                     as a young-un and in photoshop I desaturated it and applied a threshold filter to
                                     achieve the two-tone black and white.</p>
                             </div>
                             <div class="twoCol">
                                 <img class="figureProcess tall" src="Graphics/BRODY/brody-5-1.jpg">
                                 <p class="processDescription">Once again experimenting with primality
-                                    of human nature, I chose to include paint splatters to imply that the poster has been
+                                    of human nature, I chose to include paint splatters to imply that the poster has
+                                    been
                                     slung at carelessly. I obscured Brody's face by converting it to halftones and
-                                    integrating it with the background - almost as if it were burnt - with a graphite-textured
+                                    integrating it with the background - almost as if it were burnt - with a
+                                    graphite-textured
                                     photoshop brush.
                                     <br>
                                     <br>This inital experiment was the precursor for the concepts I used in the final.
