caught project 4 typo preventing button from being clicked

--- a/index.html
+++ b/index.html
@@ -761,7 +761,7 @@
                 <p class="navProjectTitle">P L A C E H O L D E R</p>
             </div>
             <div class="menuItem">
-                <button type="button" class="circle" onclick="selectProjec(4)">IV.</button>
+                <button type="button" class="circle" onclick="selectProject(4)">IV.</button>
                 <p class="navProjectTitle">P L A C E H O L D E R</p>
             </div>
             <div class="menuItem">
