fixed broken link on body mantle image

--- a/index.html
+++ b/index.html
@@ -598,7 +598,7 @@
                             <div class="threeCol">
                                 <img class="figureProcess tall" src="Graphics/MANTLE/mantle-6.jpg">
                                 <img class="figureProcess tall" src="Graphics/MANTLE/mantle-7.jpg">
-                                <img class="figureProcess tall" src="Graphics/MANTLE/mantle-6.5.jpg">
+                                <img class="figureProcess tall" src="Graphics/MANTLE/mantle-6-2.jpg">
                             </div>
                             <p class="subTitle">The Poplar Prince</p>
                             <div class="threeCol">
