--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="Graphics/favicon.png" type="image/png" sizes="16x16">
+    <link rel="icon" href="Graphics/monogram.png" type="image/png" sizes="16x16">
     <link rel="stylesheet" href="style.css" type="text/css">
     <script src="index_script.js"></script>
 
