--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
             </div>
             <div class="mediaWrapper">
                 <hr class="mediaLine">
-                <a href="https://www.behance.net/aaron_greider" target="_blank" class="mediaLink">BEHANCE</a>
+                <a href="DOWNLOADS/aaron_greider_resume_S19.pdf" download target="_blank" class="mediaLink">FULL RESUME</a>
                 <hr class="mediaLine">
-                <a href="https://www.instagram.com/aa.j.g/?hl=en" target="_blank" class="mediaLink">INSTAGRAM</a>
+                <a href="https://www.behance.net/aaron_greider" target="_blank" class="mediaLink">BEHANCE</a>
                 <hr class="mediaLine">
                 <a href="https://www.linkedin.com/in/aaron-greider" target="_blank" class="mediaLink">LINKEDIN</a>
                 <hr class="mediaLine">
