github repository link

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <hr class="mediaLine">
                 <a href="https://www.behance.net/aaron_greider" target="_blank" class="mediaLink">BEHANCE</a>
                 <hr class="mediaLine">
-                <a href="https://www.linkedin.com/in/aaron-greider" target="_blank" class="mediaLink">LINKEDIN</a>
+                <a href="https://github.com/aarongreider/aarongreider.github.io" target="_blank" class="mediaLink">GITHUB REPOSITORY</a>
                 <hr class="mediaLine">
             </div>
         </div>
