remove expand button, add landing html, styles, and js

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                         </div>
                         <div class="column colProcess">
 
-                            <p class="subTitle">Nonsense</p>
+                            <p class="subTitle">It's Nonsense</p>
                             <p class="processDescription">
                                 ’Twas brillig, and the slithy toves
                                 <br>Did gyre and gimble in the wabe:
@@ -677,7 +677,7 @@
             </div>
         </div>
 
-        <input type="image" src="Graphics/ICONS/button.svg" id="expandButton" onclick="expandProject()">
+        <!-- <input type="image" src="Graphics/ICONS/button.svg" id="expandButton" onclick="expandProject()"> -->
 
     </div>
 
