--- a/landing.html
+++ b/landing.html
@@ -1,20 +1,39 @@
-<!DOCTYPE html>
 <html>
 
 <head>
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="Graphics/monogram.png" type="image/png" sizes="16x16">
-    <link rel="stylesheet" href="style.css" type="text/css">
-    <script src="index_script.js"></script>
+    <link rel="stylesheet" href="style2.css" type="text/css">
+    <script src="landing_script.js"></script>
 
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i" rel="stylesheet">
 
 </head>
-<div id="overlay">
-</div>
 
 <body>
-    
+    <div id="overlay">
+    </div>
+    <p>
+        <i>Nice to meet you, I'm Aaron</i>
+        <br><br>Design is something of an ideal. 
+        <br>Escaping the world to create a new one... 
+        <br>To express a concept and evoke an experience.
+
+        <br><br>Every decision must be calculated.
+        <br>There must be a reason, 
+        <br>a metaphor,
+        <br>a greater good to consider from process to execution.
+        
+        <br><br>A designer makes a statement of identity through many media to craft an experience that can engulf and
+        persuade a user.
+
+        <br><br>With each challenge, I see an opportunity to prove myself;
+        <br>I've hand coded this website to stand out from my
+        peers and
+        to display my work the best it can be.
+    </p>
+
+    <p class="nextProject" onclick="transitionPage()">Check out my work!</p>
 </body>
 
 </html>
