--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
                 <hr class="mediaLine">
                 <a href="https://www.behance.net/aaron_greider" target="_blank" class="mediaLink">BEHANCE</a>
                 <hr class="mediaLine">
-                <a href="https://github.com/aarongreider/aarongreider.github.io" target="_blank" class="mediaLink">GITHUB REPOSITORY</a>
+                <a href="https://github.com/aarongreider/aarongreider.github.io" target="_blank" class="mediaLink">GITHUB
+                    REPOSITORY</a>
                 <hr class="mediaLine">
             </div>
         </div>
@@ -334,7 +335,7 @@
 
                         <div class="column colProcess">
                             <p class="subTitle">Research</p>
-                            <p class="processDescription">Naturally, we drew designers out of a hat. I drew a
+                            <p class="photoDescription">Naturally, we drew designers out of a hat. I drew a
                                 particular
                                 rebel named Neville Brody.
                                 <br>
@@ -348,7 +349,7 @@
                             </p>
                             <p class="subTitle">Inspiration</p>
 
-                            <p class="processDescription">Selected works I chose to focus on, each are Brody's own.</p>
+                            <p class="photoDescription">Selected works I chose to focus on, each are Brody's own.<br></p>
 
 
                             <div class="twoCol">
@@ -357,35 +358,35 @@
                             </div>
                             <p class="subTitle">Digital Ideation</p>
 
-                            <div class="twoRow">
-                                <img class="figureProcess halfHeight" src="Graphics/BRODY/brody-3-1.jpg">
-                                <p class="processDescription">Markmaking is a lifelong interest of
-                                    Neville Brody. For my first of several iterations, I chose to explore the somewhat
-                                    primal effect he found so
-                                    intriguing.</p>
-                            </div>
+                            <img class="figureProcess halfHeight" src="Graphics/BRODY/brody-3-1.jpg">
+                            <p class="photoDescription">
+                                <br>Markmaking is a lifelong interest of
+                                Neville Brody. For my first of several iterations, I chose to explore the somewhat
+                                primal effect he found so
+                                intriguing.<br><br><br></p>
 
-                            <div class="twoRow">
-                                <img class="figureProcess halfHeight" src="Graphics/BRODY/brody-4-1.jpg">
-                                <p class="processDescription" id="figure12Text">A face is often seen in his work,
-                                    especially early in his career, the faces were obscured in some way. I took an
-                                    image of Brody
-                                    as a young-un and in photoshop I desaturated it and applied a threshold filter to
-                                    achieve the two-tone black and white.</p>
-                            </div>
-                            <div class="twoCol">
-                                <img class="figureProcess tall" src="Graphics/BRODY/brody-5-1.jpg">
-                                <p class="processDescription">Once again experimenting with primality
-                                    of human nature, I chose to include paint splatters to imply that the poster has
-                                    been
-                                    slung at carelessly. I obscured Brody's face by converting it to halftones and
-                                    integrating it with the background - almost as if it were burnt - with a
-                                    graphite-textured
-                                    photoshop brush.
-                                    <br>
-                                    <br>This inital experiment was the precursor for the concepts I used in the final.
-                                </p>
-                            </div>
+                            <img class="figureProcess halfHeight" src="Graphics/BRODY/brody-4-1.jpg">
+                            <p class="photoDescription" id="figure12Text">
+                                <br>A face is often seen in his work,
+                                especially early in his career, the faces were obscured in some way. I took an
+                                image of Brody
+                                as a young-un and in photoshop I desaturated it and applied a threshold filter to
+                                achieve the two-tone black and white.<br><br><br></p>
+
+                            <img class="figureProcess halfHeight" src="Graphics/BRODY/brody-5-1.jpg">
+                            <p class="photoDescription">
+                                <br><br>Once again experimenting with primality
+                                of human nature, I chose to include paint splatters to imply that the poster has
+                                been
+                                slung at carelessly. I obscured Brody's face by converting it to halftones and
+                                integrating it with the background - almost as if it were burnt - with a
+                                graphite-textured
+                                photoshop brush.
+                                <br>
+                                <br>This inital experiment was the precursor for the concepts I used in the final.
+                            </p>
+                            
+
 
                             <p class="subTitle">Final Poster</p>
                             <p class="processDescription"></p>
@@ -444,20 +445,23 @@
                                 <img class="figureProcess tall" src="Graphics/POSTER/poster_2-3.jpg">
                             </div>
                         </div>
-                        <p class="processDescription" id="posterText3">I pursued the idea of implied space and
+                        <p class="photoDescription" id="posterText3">
+                            <br><br>I pursued the idea of implied space and
                             depth
                             for my first graphic poster. For the appearance of a clean and finalized result, I used
                             Autodesk
                             Maya to emulate studio-lit photography with renderings that implied the depth of the
                             paper.
                             For a paper-like effect to project text on, I used 2- dimensional planes.
+                            <br><br>
                         </p>
 
                         <div class="twoCol">
                             <img class="figureProcess tall" src="Graphics/POSTER/poster_3-2.jpg">
                             <img class="figureProcess tall" src="Graphics/POSTER/poster_3-1.jpg">
                         </div>
-                        <p class="processDescription" id="posterText5">These were the least
+                        <p class="photoDescription" id="posterText5">
+                            <br><br>These were the least
                             successful for two reasons: the official UC monograms become the visual focus - fighting
                             the
                             content and failing to show university affiliation, and the visual elements fail to
@@ -467,7 +471,8 @@
                         <p class="subTitle">Final Poster</p>
 
                         <img class="figureProcess fullHeight" src="Graphics/POSTER/poster_4.jpg">
-                        <p class="processDescription">Striving for an overarching metaphor,
+                        <p class="photoDescription">
+                            <br>Striving for an overarching metaphor,
                             I realized that my Bic ballpoint pen, laptop and mouse, scrap paper and lunatic scrawl
                             could be universally recognized as a setup for design.
                         </p>
@@ -570,26 +575,27 @@
                         <div class="column colProcess">
 
                             <p class="subTitle">Research</p>
-                            <p class="processDescription">Because the poplar planks resembled reeds, I researched
+                            <p class="photoDescription">Because the poplar planks resembled reeds, I researched
                                 styles of traditional reed
                                 armor - especially that of ancient eastern shoguns.
-                                <img class="figureProcess tall" src="Graphics/MANTLE/mantle-01.jpg">
+                                <br><br>
                             </p>
+                            <img class="figureProcess tall" src="Graphics/MANTLE/mantle-01.jpg">
 
                             <p class="subTitle">Sketches</p>
                             <img class="figureProcess tall" src="Graphics/MANTLE/mantle-1.jpg">
                             <img class="figureProcess tall" src="Graphics/MANTLE/mantle-2.jpg">
                             <p class="subTitle">Digital Ideation</p>
-                            <p class="processDescription">I began by creating a duct tape
+                            <p class="photoDescription">I began by creating a duct tape
                                 bust of my torso that I could use to brainstorm, though, I opted to brainstorm in the
                                 digital
-                                space instead.</p>
+                                space instead.<br><br></p>
                             <div class="twoRow">
                                 <img class="figureProcess tall" src="Graphics/MANTLE/mantle-3.jpg">
                                 <img class="figureProcess tall" src="Graphics/MANTLE/mantle-4.jpg">
                             </div>
                             <p class="subTitle">Construction</p>
-                            <p class="processDescription">When I began to construct the mantle, I found that the
+                            <p class="photoDescription">When I began to construct the mantle, I found that the
                                 skeleton made a
                                 better
                                 bust than my poplar-reinforced duct tape one. To create dimension of the overall form,
@@ -598,7 +604,8 @@
                                 plank.
                                 Without the spacers there would be no way to glue the sticks together. Each joint was
                                 held
-                                together for 30 minutes with a clothespin to avoid damage before the adhesive sealed.</p>
+                                together for 30 minutes with a clothespin to avoid damage before the adhesive sealed.
+                                <br><br><br></p>
                             <div class="threeCol">
                                 <img class="figureProcess tall" src="Graphics/MANTLE/mantle-6.jpg">
                                 <img class="figureProcess tall" src="Graphics/MANTLE/mantle-7.jpg">
