updated text and layout, modified file sizes

--- a/index.html
+++ b/index.html
@@ -207,9 +207,8 @@
                         <div class="column colTitle">
                             <p class="title">Photography</p>
                             <hr class="line">
-                            <p class="description">Photography is a passion of mine which bleeds greatly over into
-                                3D Modeling. I find these two arts of composition fascinating
-                                because of their capacity to control a viewer’s bias because of it’s narrow portrayal
+                            <p class="description">Photography is a longtime passion of mine. I find this art of composition fascinating
+                                because of it's capacity to control a viewer’s bias because of it's narrow and immediate portrayal
                                 of one subject.</p>
                         </div>
                         <div class="column colProcess">
@@ -294,17 +293,11 @@
                         <div class="column colTitle">
                             <p class="title">Patch</p>
                             <hr class="line">
-                            <p class="description">Patch is a work in progress midi control program. Through a
-                                custom-purposed
-                                Raspberry Pi and Teensy, we can simultaneously modify the patch - and other midi
-                                variables
-                                - of a Nord Keyboard and Virus TI synthesizer through the convenience and familiarity
-                                of
-                                a mobile web browser. Patch was in need of design assistance for the UI interface and
-                                identity
-                                of the software.</p>
+                            <p class="description">
+                            Patch is a web-app startup aimed at creating a slick and accessible interface for performance musicians.
+                            I designed the UI and identity for the early stages of development.</p>
                         </div>
-                        <div class="column colProcess">
+                        <div class="column colProcess patchGrid">
                             <img class="figureProcess figurePatch" src="Graphics/PATCH/typo-corrected_01.jpg">
                             <img class="figureProcess figurePatch" src="Graphics/PATCH/typo-corrected_02.jpg">
                             <img class="figureProcess figurePatch" src="Graphics/PATCH/typo-corrected_03.jpg">
@@ -471,6 +464,7 @@
                         <p class="subTitle">Final Poster</p>
 
                         <img class="figureProcess fullHeight" src="Graphics/POSTER/poster_4.jpg">
+                        <img class="figureProcess halfWidth" src="Graphics/POSTER/poster_5.jpg">
                         <p class="photoDescription">
                             <br>Striving for an overarching metaphor,
                             I realized that my Bic ballpoint pen, laptop and mouse, scrap paper and lunatic scrawl
