text changes, format tweak, changed monogram

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         to display my work the best it can be.
     </p>
 
-    <p class="nextProject" onclick="transitionPage()">Check out my work!</p>
+    <p class="nextProject" onclick="transitionPage()">Check it out!</p>
 </body>
 
 </html>
