jabberwocky booklet video

--- a/work.html
+++ b/work.html
@@ -196,6 +196,8 @@
                                 through, making the viewing
                                 experience of the poem as confusing
                                 as the language used.</p>
+                                
+                            <video class="figureProcess fullWidth" src="Graphics/JABBERWOCKY/jabb_8.mp4" type="video/mp4" controls></video>
                         </div>
 
                         <p class="nextProject" onclick="incrementProject()">Next Project: </p>
