change landing text

--- a/index.html
+++ b/index.html
@@ -39,9 +39,7 @@
         persuade a user.
 
         <br><br>With each challenge, I see an opportunity to prove myself;
-        <br>I've hand coded this website to stand out from my
-        peers and
-        to display my work the best it can be.
+        <br>I've hand coded this website to display my work the best it can be.
     </p>
 
     <p class="nextProject" onclick="transitionPage()">Check it out!</p>
